# Yet-Another-SCP-Wiki-Bot-For-Slack

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  pyproject.toml  scp_bot.py  wait.py
resources/: collector.py  scp-series-2.csv  scp-series-3.csv  scp-series-4.csv  scp-series-5.csv  scp-series-6.csv  scp-series-7.csv  scp-series-8.csv  scp-series-jp-2.csv  scp-series-jp-3.csv  scp-series-jp-list.csv  scp-series-jp-list.json  scp-series-jp.csv  scp-series-list.csv  scp-series-list.json  scp-series.csv
