[tool.poetry]
name = "yet-another-scp-wiki-bot-for-slack"
version = "0.1.0"
description = "A bot for posting SCP article on Slack channels every day."
authors = ["botamochi0x12"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.19.5"
pyscp = {path = "modules/pyscp"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
